# chatbot

./: README.md  pyproject.toml
src/chatbot2/: crew.py  main.py  monitors.py
src/chatbot2/config/: agents.yaml  tasks.yaml
