[project]
name = "chatbot2"
version = "0.1.0"
description = "chatbot2 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.140.0,<1.0.0"
]

[project.scripts]
chatbot2 = "chatbot2.main:run"
run_crew = "chatbot2.main:run"
train = "chatbot2.main:train"
replay = "chatbot2.main:replay"
test = "chatbot2.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
